--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="logo">
           <a href="#">
             <h2 class="name">
-              andrei avrammm
+              andrei avram
             </h2>
           </a>
           <img src="/graphics/yellow-semi.png" alt="yellow semi-circle" class="semi">
