--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
         </div>
         <nav class="navigation">
           <ul class="navigation_list">
-            <a class="navigation_link" href="#">
-              <li class="navigation_list-item work">work</li>
+            <a class="navigation_link" href="#work-header">
+              <li class="navigation_list-item work-nav">work</li>
             </a>
-            <a class="navigation_link" href="">
-              <li class="navigation_list-item about">about</li>
+            <a class="navigation_link" href="#about-header">
+              <li class="navigation_list-item about-nav">about</li>
             </a>
-            <a class="navigation_link" href="">
-              <li class="navigation_list-item contact">contact</li>
+            <a class="navigation_link" href="#contact-header">
+              <li class="navigation_list-item contact-nav">contact</li>
             </a>
           </ul>
         </nav>
@@ -37,28 +37,72 @@
         <section class="hero">
           <div class="hero_left" id="hero-left">
             <div class="hero_header">
-              <img class="red-square" src="/graphics/red-square.png">
-              <h1 class="main-title" id="main-title">
-                  designer<br>
-                  developer<br>
-                  digital artisan
-              </h1>
-              <img class="blue-triangle" src="/graphics/blue-triangle.png">
+              <h1 class="main-title" id="main-title"><span id="span-designer">designer</span><span>developer</span><span id="span-digital-artisan">digital artisan</span></h1>
             </div>
             <p class="hero_body"><span class="my-name">Andrei</span> is a designer based in Rotterdam, focusing on crafting beautiful digital experiences by combining interaction psychology with a pixel-perfect approach to aesthetics.</p>
+            <div class="hero_buttons">
+              <!-- <a href="#about-header"><button id="about-button">ABOUT</button></a> -->
+              <!-- <a href="#work-header"><button id="work-button">WORK</button></a> -->
+            </div>
           </div>
           <div class="hero_right">
             <img src="/graphics/abstract-render.png" alt="abstract-shapes" class="abstract-shapes" id="abstract-shapes">
             <img src="/graphics/yellow-rect.png" alt="yellow-rectangle" class="yellow-rect" id="yellow-rect">
           </div>
         </section>
+        <section class="work">
+          <h1 id="work-header">Work</h1>
+          <div class="portfolio-wrapper">
+            <div class="work-wrapper">
+              <img src="https://source.unsplash.com/random/500x500" alt="" class="work_image" id="work_image-1">
+              <div class="work-wrapper_right" id="work-wrapper_right-1">
+                <h2 class="work-wrapper_header">
+                  Lorem Ipsum
+                </h2>
+                <p class="work-wrapper_body" id="work_body-1">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente aliquid fugiat error voluptatibus, recusandae distinctio voluptate delectus fugit explicabo nisi vel eligendi nam iure, reprehenderit dolorem harum ipsa eos tempora.
+                  Cumque, ut. Deserunt nisi nihil voluptate laudantium, dolores quaerat amet provident quas aperiam consectetur numquam unde. Sit expedita provident doloribus enim, reprehenderit cumque velit vitae inventore facere voluptas quas unde.
+                </p>
+              </div>
+            </div>
+            <div class="work-wrapper">
+              <img src="https://source.unsplash.com/random/500x500" alt="" class="work_image" id="work_image-2">
+              <div class="work-wrapper_right" id="work-wrapper_right-2">
+                <h2 class="work-wrapper_header">
+                  Lorem Ipsum
+                </h2>
+                <p class="work-wrapper_body" id="work_body-2">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente aliquid fugiat error voluptatibus, recusandae distinctio voluptate delectus fugit explicabo nisi vel eligendi nam iure, reprehenderit dolorem harum ipsa eos tempora.
+                  Cumque, ut. Deserunt nisi nihil voluptate laudantium, dolores quaerat amet provident quas aperiam consectetur numquam unde. Sit expedita provident doloribus enim, reprehenderit cumque velit vitae inventore facere voluptas quas unde.
+                </p>
+              </div>
+            </div>
+          </div>
+          </section>
+          <section class="about">
+            <h1 id="about-header">About</h1>
+            <div class="about-wrapper">
+              <div class="about_left">
+                <p class="about_left-body"><span>Andrei is currently a student at The Hague University of Applied Sciences, studying user experience design, and he’s interested in pursuing a career as a UX engineer, being responsible for research, ideation, design, development, and implementation.</span><span>
+              Taking inspiration from the Bauhaus school and international typography, Andrei has a modern approach to design, aiming for simplicity and functionality.</span><span>He is proficient in wireframing, prototyping, coding, colour theory, and design principles, and is currently developing his skills in user research, react js, and motion graphics.
+                </p>
+              </div>
+            
+              <div class="about_right">
+                <img src="https://source.unsplash.com/random/400x300">
+            </div>
+
+        </section>
+        <section class="contact">
+          <h1 id="contact-header">Contact</h1>
+        </section>
       </main>
       </nav>
     </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.1/TweenMax.min.js"></script> 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TweenMax.min.js"></script>	
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TimelineMax.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/ScrollMagic.min.js"></script> 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/ScrollMagic.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/plugins/animation.gsap.min.js"></script>
-    <script src="script.js"></script>
+    <!-- <script src="script.js"></script> -->
   </body>
 </html>
