--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <h1 id="work-header">Work</h1>
           <div class="portfolio-wrapper">
             <div class="work-wrapper">
-              <img src="https://source.unsplash.com/random/500x500" alt="" class="work_image" id="work_image-1">
+              <img src="/graphics/rotterdam.jpg" alt="" class="work_image" id="work_image-1">
               <div class="work-wrapper_right" id="work-wrapper_right-1">
                 <h2 class="work-wrapper_header">
                   Lorem Ipsum
@@ -66,7 +66,7 @@
               </div>
             </div>
             <div class="work-wrapper">
-              <img src="https://source.unsplash.com/random/500x500" alt="" class="work_image" id="work_image-2">
+              <img src="/graphics/ceausescu.jpg" alt="" class="work_image" id="work_image-2">
               <div class="work-wrapper_right" id="work-wrapper_right-2">
                 <h2 class="work-wrapper_header">
                   Lorem Ipsum
@@ -89,7 +89,7 @@
               </div>
             
               <div class="about_right">
-                <img src="https://source.unsplash.com/random/500x500">
+                <img src="/graphics/hortus-botanicus.JPG">
             </div>
 
         </section>
