--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <h1 id="work-header">Work</h1>
           <div class="portfolio-wrapper">
             <div class="work-wrapper">
-              <img src="/graphics/rotterdam.jpg" alt="" class="work_image" id="work_image-1">
+              <img src="/graphics/kunsthal.jpg" alt="" class="work_image" id="work_image-1">
               <div class="work-wrapper_right" id="work-wrapper_right-1">
                 <h2 class="work-wrapper_header">
                   Lorem Ipsum
@@ -77,6 +77,30 @@
                 </p>
               </div>
             </div>
+            <div class="work-wrapper">
+              <img src="/graphics/dacia.jpg" alt="" class="work_image" id="work_image-3">
+              <div class="work-wrapper_right" id="work-wrapper_right-3">
+                <h2 class="work-wrapper_header">
+                  Lorem Ipsum
+                </h2>
+                <p class="work-wrapper_body" id="work_body-3">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente aliquid fugiat error voluptatibus, recusandae distinctio voluptate delectus fugit explicabo nisi vel eligendi nam iure, reprehenderit dolorem harum ipsa eos tempora.
+                  Cumque, ut. Deserunt nisi nihil voluptate laudantium, dolores quaerat amet provident quas aperiam consectetur numquam unde. Sit expedita provident doloribus enim, reprehenderit cumque velit vitae inventore facere voluptas quas unde.
+                </p>
+              </div>
+            </div>
+            <div class="work-wrapper">
+              <img src="/graphics/pompidou.jpg" alt="" class="work_image" id="work_image-4">
+              <div class="work-wrapper_right" id="work-wrapper_right-4">
+                <h2 class="work-wrapper_header">
+                  Lorem Ipsum
+                </h2>
+                <p class="work-wrapper_body" id="work_body-4">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente aliquid fugiat error voluptatibus, recusandae distinctio voluptate delectus fugit explicabo nisi vel eligendi nam iure, reprehenderit dolorem harum ipsa eos tempora.
+                  Cumque, ut. Deserunt nisi nihil voluptate laudantium, dolores quaerat amet provident quas aperiam consectetur numquam unde. Sit expedita provident doloribus enim, reprehenderit cumque velit vitae inventore facere voluptas quas unde.
+                </p>
+              </div>
+            </div>
           </div>
           </section>
           <section class="about">
@@ -89,7 +113,7 @@
               </div>
             
               <div class="about_right">
-                <img src="/graphics/hortus-botanicus.JPG">
+                <img src="/graphics/hortus-botanicus.jpg">
             </div>
 
         </section>
