--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
               </div>
             
               <div class="about_right">
-                <img src="/graphics/hortus-botanicus.jpg">
+                <img src="/graphics/hortus-botanicus.jpg" class="hortus-botanicus">
             </div>
 
         </section>
