--- a/index.html
+++ b/index.html
@@ -54,7 +54,9 @@
           <h1 id="work-header">Work</h1>
           <div class="portfolio-wrapper">
             <div class="work-wrapper">
-              <img src="/graphics/kunsthal.jpg" alt="" class="work_image" id="work_image-1">
+              <div class="work-wrapper_left">
+                <img src="/graphics/kunsthal.jpg" alt="" class="work_image" id="work_image-1">
+              </div>
               <div class="work-wrapper_right" id="work-wrapper_right-1">
                 <h2 class="work-wrapper_header">
                   Lorem Ipsum
@@ -66,7 +68,9 @@
               </div>
             </div>
             <div class="work-wrapper">
-              <img src="/graphics/ceausescu.jpg" alt="" class="work_image" id="work_image-2">
+              <div class="work-wrapper_left">
+                <img src="/graphics/ceausescu.jpg" alt="" class="work_image" id="work_image-2">
+              </div>
               <div class="work-wrapper_right" id="work-wrapper_right-2">
                 <h2 class="work-wrapper_header">
                   Lorem Ipsum
@@ -78,7 +82,9 @@
               </div>
             </div>
             <div class="work-wrapper">
-              <img src="/graphics/dacia.jpg" alt="" class="work_image" id="work_image-3">
+              <div class="work-wrapper_left">
+                <img src="/graphics/ceausescu-2.jpg" alt="" class="work_image" id="work_image-3">
+              </div>
               <div class="work-wrapper_right" id="work-wrapper_right-3">
                 <h2 class="work-wrapper_header">
                   Lorem Ipsum
@@ -90,7 +96,7 @@
               </div>
             </div>
             <div class="work-wrapper">
-              <img src="/graphics/pompidou.jpg" alt="" class="work_image" id="work_image-4">
+              <div class="work-wrapper_left"><img src="/graphics/pompidou.jpg" alt="" class="work_image" id="work_image-4"></div>
               <div class="work-wrapper_right" id="work-wrapper_right-4">
                 <h2 class="work-wrapper_header">
                   Lorem Ipsum
@@ -113,7 +119,9 @@
               </div>
             
               <div class="about_right">
-                <img src="/graphics/hortus-botanicus.jpg" class="hortus-botanicus">
+                <about_right-image>
+                  <img src="/graphics/hortus-botanicus.jpg">
+                </about_right-image>
             </div>
 
         </section>
