--- a/index.html
+++ b/index.html
@@ -96,7 +96,9 @@
               </div>
             </div>
             <div class="work-wrapper">
-              <div class="work-wrapper_left"><img src="/graphics/pompidou.jpg" alt="" class="work_image" id="work_image-4"></div>
+              <div class="work-wrapper_left">
+                <img src="/graphics/pompidou.jpg" alt="" class="work_image" id="work_image-4">
+              </div>
               <div class="work-wrapper_right" id="work-wrapper_right-4">
                 <h2 class="work-wrapper_header">
                   Lorem Ipsum
@@ -119,9 +121,10 @@
               </div>
             
               <div class="about_right">
-                <about_right-image>
+                <div class="about_right-image">
                   <img src="/graphics/hortus-botanicus.jpg">
-                </about_right-image>
+                </div>
+
             </div>
 
         </section>
