--- a/index.html
+++ b/index.html
@@ -139,5 +139,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/ScrollMagic.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/plugins/animation.gsap.min.js"></script>
     <script src="script.js"></script>
+    <script src="snow.js"></script>
+
   </body>
 </html>
