--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" id="page">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -17,7 +17,7 @@
               andrei avram
             </h2>
           </a>
-          <img src="/graphics/yellow-semi.png" alt="yellow semi-circle" class="semi">
+          <img src="/graphics/yellow-semi.png" alt="yellow semi-circle" class="semi" id="semi">
         </div>
         <nav class="navigation">
           <ul class="navigation_list">
@@ -134,12 +134,32 @@
       </main>
       </nav>
     </div>
+      <footer class="footer">
+        <div class="container footer_wrapper">
+          <div class="footer_left">
+            <p> ~(˘▾˘~) MADE BY ANDREI (~˘▾˘)~</p>
+          </div>
+          <div class="footer_right">
+            <a href="">
+              <p>INSTAGRAM</p>
+            </a>
+            <a href="">
+              <p>FACEBOOK</p>
+            </a>
+            <a href="">
+              <p>LINKEDIN</p>
+            </a>
+            <a href="">
+              <p>ONLYFANS</p>
+            </a>
+          </div>
+        </div>
+      </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TweenMax.min.js"></script>	
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TimelineMax.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/ScrollMagic.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/plugins/animation.gsap.min.js"></script>
     <script src="script.js"></script>
     <script src="snow.js"></script>
-
   </body>
 </html>
