--- a/index.html
+++ b/index.html
@@ -137,20 +137,15 @@
       <footer class="footer">
         <div class="container footer_wrapper">
           <div class="footer_left">
-            <p> ~(˘▾˘~) MADE BY ANDREI (~˘▾˘)~</p>
+            <p>made by andrei (~˘▾˘)~</p>
           </div>
           <div class="footer_right">
             <a href="">
-              <p>INSTAGRAM</p>
-            </a>
-            <a href="">
-              <p>FACEBOOK</p>
-            </a>
             <a href="">
               <p>LINKEDIN</p>
             </a>
             <a href="">
-              <p>ONLYFANS</p>
+              <p>RESUME</p>
             </a>
           </div>
         </div>
