--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
           </a>
           <img src="/graphics/yellow-semi.png" alt="yellow semi-circle" class="semi" id="semi">
         </div>
-        <nav class="navigation">
+        <nav class="navigation" id="navbar">
           <ul class="navigation_list">
             <a class="navigation_link" href="#work-header">
-              <li class="navigation_list-item work-nav">work</li>
+              <li class="navigation_list-item work-nav">work.</li>
             </a>
             <a class="navigation_link" href="#about-header">
-              <li class="navigation_list-item about-nav">about</li>
+              <li class="navigation_list-item about-nav">about.</li>
             </a>
             <a class="navigation_link" href="#contact-header">
-              <li class="navigation_list-item contact-nav">contact</li>
+              <li class="navigation_list-item contact-nav">contact.</li>
             </a>
           </ul>
         </nav>
@@ -48,6 +48,19 @@
           <div class="hero_right">
             <img src="/graphics/abstract-render.png" alt="abstract-shapes" class="abstract-shapes" id="abstract-shapes">
             <img src="/graphics/yellow-rect.png" alt="yellow-rectangle" class="yellow-rect" id="yellow-rect">
+          </div>
+          <div class="side-menu" id="side-menu">
+            <ul class="side-menu_list">
+              <a href="#header" class="side-menu_link">
+                <li class="side-menu_item">home.</li>
+              </a>
+              <a href="#about-header" class="side-menu_link">
+                <li class="side-menu_item">about.</li>
+              </a>
+              <a href="#work-header" class="side-menu_link">
+                <li class="side-menu_item">work.</li>
+              </a>
+            </ul>
           </div>
         </section>
         <section class="work">
@@ -140,11 +153,10 @@
             <p>made by andrei (~˘▾˘)~</p>
           </div>
           <div class="footer_right">
-            <a href="">
-            <a href="">
+            <a href="#">
               <p>LINKEDIN</p>
             </a>
-            <a href="">
+            <a href="#">
               <p>RESUME</p>
             </a>
           </div>
@@ -155,6 +167,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/ScrollMagic.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/plugins/animation.gsap.min.js"></script>
     <script src="script.js"></script>
-    <script src="snow.js"></script>
+    <!-- <script src="snow.js"></script> -->
   </body>
 </html>
