--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
         <nav class="navigation" id="navbar">
           <ul class="navigation_list">
             <a class="navigation_link" href="#work-header">
-              <li class="navigation_list-item work-nav">work.</li>
+              <li class="navigation_list-item work-nav">work</li>
             </a>
             <a class="navigation_link" href="#about-header">
-              <li class="navigation_list-item about-nav">about.</li>
+              <li class="navigation_list-item about-nav">about</li>
             </a>
             <a class="navigation_link" href="#contact-header">
-              <li class="navigation_list-item contact-nav">contact.</li>
+              <li class="navigation_list-item contact-nav">contact</li>
             </a>
           </ul>
         </nav>
@@ -52,13 +52,13 @@
           <div class="side-menu" id="side-menu">
             <ul class="side-menu_list">
               <a href="#header" class="side-menu_link">
-                <li class="side-menu_item">home.</li>
+                <li class="side-menu_item">home</li>
               </a>
               <a href="#about-header" class="side-menu_link">
-                <li class="side-menu_item">about.</li>
+                <li class="side-menu_item">about</li>
               </a>
               <a href="#work-header" class="side-menu_link">
-                <li class="side-menu_item">work.</li>
+                <li class="side-menu_item">work</li>
               </a>
             </ul>
           </div>
@@ -167,6 +167,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/ScrollMagic.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/plugins/animation.gsap.min.js"></script>
     <script src="script.js"></script>
-    <script src="snow.js"></script>
+    <!-- <script src="snow.js"></script> -->
   </body>
 </html>
