--- a/index.html
+++ b/index.html
@@ -150,14 +150,14 @@
       <footer class="footer">
         <div class="container footer_wrapper">
           <div class="footer_left">
-            <p>made by andrei (~˘▾˘)~</p>
+            <p>&copy;designed and built by andrei avram</p>
           </div>
           <div class="footer_right">
             <a href="#">
               <p>LINKEDIN</p>
             </a>
-            <a href="#">
-              <p>RESUME</p>
+            <a href="mailto:andrei.avm00@gmail.com?subject=Hello">
+              <p>SAY HELLO</p>
             </a>
           </div>
         </div>
@@ -167,6 +167,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/ScrollMagic.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/plugins/animation.gsap.min.js"></script>
     <script src="script.js"></script>
-    <!-- <script src="snow.js"></script> -->
+    <script src="snow.js"></script>
   </body>
 </html>
