--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@
           </div>
           <div class="side-menu" id="side-menu">
             <ul class="side-menu_list">
-              <a href="#header" class="side-menu_link">
-                <li class="side-menu_item">home</li>
+              <a href="#about-header" class="side-menu_link">
+                <li class="side-menu_item">about</li>
               </a>
               <a href="#work-header" class="side-menu_link">
                 <li class="side-menu_item">work</li>
               </a>
-              <a href="#about-header" class="side-menu_link">
-                <li class="side-menu_item">about</li>
+              <a href="#header" class="side-menu_link">
+                <li class="side-menu_item">home</li>
               </a>
             </ul>
           </div>
@@ -65,16 +65,19 @@
           <div class="portfolio-wrapper">
             <div class="work-wrapper">
               <div class="work-wrapper_left">
-                <img src="/graphics/kunsthal.jpg" alt="" class="work_image" id="work_image-1">
+                <a href="/maynooth.html"><img src="/graphics/Mockup2.jpg" alt="" class="work_image" id="work_image-1"></a>
               </div>
               <div class="work-wrapper_right" id="work-wrapper_right-1">
                 <h2 class="work-wrapper_header">
-                  Lorem Ipsum
+                  Maynooth Furniture
                 </h2>
+                <h3 class="subtitle">
+                  design and development
+                </h3>
                 <p class="work-wrapper_body" id="work_body-1">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente aliquid fugiat error voluptatibus, recusandae distinctio voluptate delectus fugit explicabo nisi vel eligendi nam iure, reprehenderit dolorem harum ipsa eos tempora.
-                  Cumque, ut. Deserunt nisi nihil voluptate laudantium, dolores quaerat amet provident quas aperiam consectetur numquam unde. Sit expedita provident doloribus enim, reprehenderit cumque velit vitae inventore facere voluptas quas unde.
                 </p>
+                <a href="/maynooth.html"><button class="button blue">VIEW PROJECT</button></a>
               </div>
             </div>
             <div class="work-wrapper">
@@ -87,7 +90,6 @@
                 </h2>
                 <p class="work-wrapper_body" id="work_body-2">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente aliquid fugiat error voluptatibus, recusandae distinctio voluptate delectus fugit explicabo nisi vel eligendi nam iure, reprehenderit dolorem harum ipsa eos tempora.
-                  Cumque, ut. Deserunt nisi nihil voluptate laudantium, dolores quaerat amet provident quas aperiam consectetur numquam unde. Sit expedita provident doloribus enim, reprehenderit cumque velit vitae inventore facere voluptas quas unde.
                 </p>
               </div>
             </div>
@@ -101,7 +103,6 @@
                 </h2>
                 <p class="work-wrapper_body" id="work_body-3">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente aliquid fugiat error voluptatibus, recusandae distinctio voluptate delectus fugit explicabo nisi vel eligendi nam iure, reprehenderit dolorem harum ipsa eos tempora.
-                  Cumque, ut. Deserunt nisi nihil voluptate laudantium, dolores quaerat amet provident quas aperiam consectetur numquam unde. Sit expedita provident doloribus enim, reprehenderit cumque velit vitae inventore facere voluptas quas unde.
                 </p>
               </div>
             </div>
@@ -115,7 +116,6 @@
                 </h2>
                 <p class="work-wrapper_body" id="work_body-4">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente aliquid fugiat error voluptatibus, recusandae distinctio voluptate delectus fugit explicabo nisi vel eligendi nam iure, reprehenderit dolorem harum ipsa eos tempora.
-                  Cumque, ut. Deserunt nisi nihil voluptate laudantium, dolores quaerat amet provident quas aperiam consectetur numquam unde. Sit expedita provident doloribus enim, reprehenderit cumque velit vitae inventore facere voluptas quas unde.
                 </p>
               </div>
             </div>
@@ -159,6 +159,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/ScrollMagic.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/plugins/animation.gsap.min.js"></script>
     <script src="script.js"></script>
-    <script src="snow.js"></script>
+    <!-- <script src="snow.js"></script> -->
   </body>
 </html>
