--- a/maynooth.html
+++ b/maynooth.html
@@ -56,6 +56,7 @@
                 <div class="project_wrapper">
                     <img src="/graphics/Mockup.jpg" alt="mock-up maynooth furniture" class="maynooth-mockup">
                     <img src="/graphics/Mockup laptop.jpg" alt="mock-up maynooth furniture" class="maynooth-mockup">
+                    <img src="/graphics/mindmap-maynooth.jpeg" alt="mock-up maynooth furniture" class="maynooth-mockup">
                 </div>
             </div>
         </section>
