--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
                 <p class="work-wrapper_body" id="work_body-2">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente aliquid fugiat error voluptatibus, recusandae distinctio voluptate delectus fugit explicabo nisi vel eligendi nam iure, reprehenderit dolorem harum ipsa eos tempora.
                 </p>
+                <a href="/maynooth.html"><button class="button red">VIEW PROJECT</button></a>
               </div>
             </div>
             <div class="work-wrapper">
