--- a/maynooth.html
+++ b/maynooth.html
@@ -14,8 +14,7 @@
         <div class="logo">
           <a href="/index.html">
             <h2 class="name">
-              andrei avram
-            </h2>
+              andrei avram            </h2>
           </a>
           <img src="/graphics/yellow-semi.png" alt="yellow semi-circle" class="semi" id="semi">
         </div>
@@ -56,7 +55,15 @@
                 <div class="project_wrapper">
                     <img src="/graphics/Mockup.jpg" alt="mock-up maynooth furniture" class="maynooth-mockup">
                     <img src="/graphics/Mockup laptop.jpg" alt="mock-up maynooth furniture" class="maynooth-mockup">
-                    <img src="/graphics/mindmap-maynooth.jpeg" alt="mock-up maynooth furniture" class="maynooth-mockup">
+                    <div class="mindmap-wrapper">
+                      <div class="mind-map_right">
+                        <h2>Mindmap</h2>
+                        <p class="mind-map_body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius enim repudiandae aut possimus deserunt, velit tempora. Voluptatibus, dolore repellat quia totam unde itaque dolor sequi pariatur odio cumque similique illo!</p>
+                      </div>
+                      <div class="mind-map_left">
+                        <img src="/graphics/mindmap-maynooth.jpeg" alt="mock-up maynooth furniture" class="maynooth-mindmap">
+                      </div>
+                    </div>
                 </div>
             </div>
         </section>
