--- a/maynooth.html
+++ b/maynooth.html
@@ -51,6 +51,9 @@
                     <h2>my role: design and development</h2>
                     <h2>project type: personal</h2>
                     <p class="project_body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus obcaecati porro doloribus dolores inventore a iusto facere corrupti dolor, libero, temporibus eligendi itaque consectetur! Facilis sapiente natus fuga voluptates non!</p>
+                    <a href="https://amazing-curie-5c87a2.netlify.app/index.html" target="_blank">
+                      <h2 class="site-link">view website</h2>
+                    </a>
                 </div>
                 <div class="project_wrapper">
                     <img src="/graphics/Mockup.jpg" alt="mock-up maynooth furniture" class="maynooth-mockup">
