--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
                 <p class="about_left-body"><span>Andrei is currently a student at The Hague University of Applied Sciences, studying user experience design, and he’s interested in pursuing a career as a UX engineer, being responsible for research, ideation, design, development, and implementation.</span><span>
               Taking inspiration from the Bauhaus school and international typography, Andrei has a modern approach to design, aiming for simplicity and functionality.</span><span>He is proficient in wireframing, prototyping, coding, colour theory, and design principles, and is currently developing his skills in user research, react js, and motion graphics.
                 </p>
+                <button class="button red">LEARN MORE</button>
               </div>
             
               <div class="about_right">
