--- a/index.html
+++ b/index.html
@@ -37,10 +37,6 @@
               <h1 class="main-title" id="main-title"><span id="span-designer">designer</span><span>developer</span><span id="span-digital-artisan">digital artisan</span></h1>
             </div>
             <p class="hero_body"><span class="my-name">Andrei</span> is a designer based in Rotterdam, focusing on crafting beautiful digital experiences by combining interaction psychology with a pixel-perfect approach to aesthetics.</p>
-            <div class="hero_buttons">
-              <!-- <a href="#about-header"><button id="about-button">ABOUT</button></a> -->
-              <!-- <a href="#work-header"><button id="work-button">WORK</button></a> -->
-            </div>
           </div>
           <div class="hero_right">
             <img src="/graphics/abstract-render.png" alt="abstract-shapes" class="abstract-shapes" id="abstract-shapes">
@@ -77,7 +73,7 @@
                 <p class="work-wrapper_body" id="work_body-1">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente aliquid fugiat error voluptatibus, recusandae distinctio voluptate delectus fugit explicabo nisi vel eligendi nam iure, reprehenderit dolorem harum ipsa eos tempora.
                 </p>
-                <a href="/maynooth.html"><button class="button blue">VIEW PROJECT</button></a>
+                <a href="/maynooth.html"><button class="blue">VIEW PROJECT</button></a>
               </div>
             </div>
             <div class="work-wrapper">
@@ -91,7 +87,7 @@
                 <p class="work-wrapper_body" id="work_body-2">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente aliquid fugiat error voluptatibus, recusandae distinctio voluptate delectus fugit explicabo nisi vel eligendi nam iure, reprehenderit dolorem harum ipsa eos tempora.
                 </p>
-                <a href="/maynooth.html"><button class="button red">VIEW PROJECT</button></a>
+                <a href="/maynooth.html"><button class="red">VIEW PROJECT</button></a>
               </div>
             </div>
             <div class="work-wrapper">
@@ -129,7 +125,6 @@
                 <p class="about_left-body"><span>Andrei is currently a student at The Hague University of Applied Sciences, studying user experience design, and he’s interested in pursuing a career as a UX engineer, being responsible for research, ideation, design, development, and implementation.</span><span>
               Taking inspiration from the Bauhaus school and international typography, Andrei has a modern approach to design, aiming for simplicity and functionality.</span><span>He is proficient in wireframing, prototyping, coding, colour theory, and design principles, and is currently developing his skills in user research, react js, and motion graphics.
                 </p>
-                <button class="button red">LEARN MORE</button>
               </div>
             
               <div class="about_right">
