--- a/maynooth.html
+++ b/maynooth.html
@@ -31,10 +31,10 @@
       </header>
         <div class="side-menu" id="side-menu">
             <ul class="side-menu_list">
-                 <a href="#about-header" class="side-menu_link">
+                 <a href="/index.html#about-header" class="side-menu_link">
                     <li class="side-menu_item">about</li>
                 </a>
-                <a href="#work-header" class="side-menu_link">
+                <a href="/index.html#work-header" class="side-menu_link">
                     <li class="side-menu_item">work</li>
                 </a>
                 <a href="#header" class="side-menu_link">
@@ -50,9 +50,10 @@
                     <h1 class="project-title">Maynooth Furniture</h1>
                     <h2>my role: design and development</h2>
                     <h2>project type: personal</h2>
-                    <p class="project_body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus obcaecati porro doloribus dolores inventore a iusto facere corrupti dolor, libero, temporibus eligendi itaque consectetur! Facilis sapiente natus fuga voluptates non!</p>
+                    <p class="project_body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus obcaecati porro doloribus dolores inventore a iusto facere corrupti dolor, libero, temporibus eligendi itaque consectetur! Facilis sapiente natus fuga voluptates non</p>
                     <a href="https://amazing-curie-5c87a2.netlify.app/index.html" target="_blank">
-                      <h2 class="site-link">view website</h2>
+                      <h2 class="site-link">view website
+                      </h2>
                     </a>
                 </div>
                 <div class="project_wrapper">
@@ -61,7 +62,7 @@
                     <div class="mindmap-wrapper">
                       <div class="mind-map_right">
                         <h2>Mindmap</h2>
-                        <p class="mind-map_body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius enim repudiandae aut possimus deserunt, velit tempora. Voluptatibus, dolore repellat quia totam unde itaque dolor sequi pariatur odio cumque similique illo!</p>
+                        <p class="mind-map_body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius enim repudiandae aut possimus deserunt, velit tempora. Voluptatibus, dolore repellat quia totam unde itaque dolor sequi pariatur odio cumque similique illo</p>
                       </div>
                       <div class="mind-map_left">
                         <img src="/graphics/mindmap-maynooth.jpeg" alt="mock-up maynooth furniture" class="maynooth-mindmap">
