--- a/index.html
+++ b/index.html
@@ -78,40 +78,47 @@
             </div>
             <div class="work-wrapper">
               <div class="work-wrapper_left">
-                <img src="/graphics/ceausescu.jpg" alt="" class="work_image" id="work_image-2">
+                <a href="xdassignment.html"><img src="/graphics/xd-app-mockup.jpg" alt="" class="work_image" id="work_image-2"></a>
               </div>
               <div class="work-wrapper_right" id="work-wrapper_right-2">
                 <h2 class="work-wrapper_header">
-                  Lorem Ipsum
+                  XD Assignment
                 </h2>
+                   <h3 class="subtitle">
+                  design and prototype
+                </h3>
                 <p class="work-wrapper_body" id="work_body-2">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente aliquid fugiat error voluptatibus, recusandae distinctio voluptate delectus fugit explicabo nisi vel eligendi nam iure, reprehenderit dolorem harum ipsa eos tempora.
                 </p>
-                <a href="/maynooth.html"><button class="red">VIEW PROJECT</button></a>
+                <a href="/xdassignment.html"><button class="red">VIEW PROJECT</button></a>
               </div>
             </div>
             <div class="work-wrapper">
               <div class="work-wrapper_left">
-                <img src="/graphics/ceausescu-2.jpg" alt="" class="work_image" id="work_image-3">
-              </div>
-              <div class="work-wrapper_right" id="work-wrapper_right-3">
-                <h2 class="work-wrapper_header">
-                  Lorem Ipsum
-                </h2>
-                <p class="work-wrapper_body" id="work_body-3">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente aliquid fugiat error voluptatibus, recusandae distinctio voluptate delectus fugit explicabo nisi vel eligendi nam iure, reprehenderit dolorem harum ipsa eos tempora.
-                </p>
-              </div>
-            </div>
-            <div class="work-wrapper">
-              <div class="work-wrapper_left">
-                <img src="/graphics/pompidou.jpg" alt="" class="work_image" id="work_image-4">
+                <img src="/graphics/productreview-placeholder.jpg" alt="" class="work_image" id="work_image-4">
               </div>
               <div class="work-wrapper_right" id="work-wrapper_right-4">
                 <h2 class="work-wrapper_header">
                   Lorem Ipsum
                 </h2>
                 <p class="work-wrapper_body" id="work_body-4">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente aliquid fugiat error voluptatibus, recusandae distinctio voluptate delectus fugit explicabo nisi vel eligendi nam iure, reprehenderit dolorem harum ipsa eos tempora.
+                </p>
+                <a href="/productreview.html"><button class="blue">VIEW PROJECT</button></a>
+              </div>
+            </div>
+            <div class="work-wrapper">
+              <div class="work-wrapper_left">
+                <img src="/graphics/bespoke-placeholder.jpg" alt="" class="work_image" id="work_image-3">
+              </div>
+              <div class="work-wrapper_right" id="work-wrapper_right-3">
+                <h2 class="work-wrapper_header">
+                  Bespoke Design
+                </h2>
+                   <h3 class="subtitle">
+                  research, ideate and design
+                </h3>
+                <p class="work-wrapper_body" id="work_body-3">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente aliquid fugiat error voluptatibus, recusandae distinctio voluptate delectus fugit explicabo nisi vel eligendi nam iure, reprehenderit dolorem harum ipsa eos tempora.
                 </p>
               </div>
@@ -125,6 +132,9 @@
                 <p class="about_left-body"><span>Andrei is currently a student at The Hague University of Applied Sciences, studying user experience design, and he’s interested in pursuing a career as a UX engineer, being responsible for research, ideation, design, development, and implementation.</span><span>
               Taking inspiration from the Bauhaus school and international typography, Andrei has a modern approach to design, aiming for simplicity and functionality.</span><span>He is proficient in wireframing, prototyping, coding, colour theory, and design principles, and is currently developing his skills in user research, react js, and motion graphics.
                 </p>
+                <a href="about.html" class="about_left-link">
+                  <h2>learn more</h2>
+                </a>
               </div>
             
               <div class="about_right">
@@ -145,7 +155,7 @@
             <a href="#">
               <p>LINKEDIN</p>
             </a>
-            <a href="mailto:andrei.avm00@gmail.com?subject=Hello">
+            <a href="mailto:andrei.avm00@gmail.com?subject=Hello" target="_blank">
               <p>SAY HELLO</p>
             </a>
           </div>
