--- a/about.html
+++ b/about.html
@@ -45,39 +45,40 @@
         </div>
       </div>
       <main>
-        <section class="project">
+        <section class="about">
             <div class="container">
-                <div class="project_text">
-                    <div class="project-left">
-                      <h1 class="project-title">Maynooth Furniture</h1>
-                      <h2>my role: design and development</h2>
-                      <h2>project type: personal</h2>
-                      <p class="project_body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus obcaecati porro doloribus dolores inventore a iusto facere corrupti dolor, libero, temporibus eligendi itaque consectetur! Facilis sapiente natus fuga voluptates non</p>
-                      <a href="https://amazing-curie-5c87a2.netlify.app/index.html" target="_blank">
-                        <h2 class="site-link">view website
-                        </h2>
-                      </a>
+                <div class="aboutpage-wrapper">
+                    <div class="aboutpage-left">
+                        <h2>how it started</h2>
+                        <p>
+                            <span>I was born and grew up in Romania in a small mountain town called <span class="busteni">Busteni</span>, which literally translates to tree logs. As soon as I finished high-school, I moved to Bucharest, the capital city of Romania, to pursue higher education. This is the place where I found my passion for design.</span>
+                            <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic in error nihil provident autem placeat recusandae, neque amet officia esse mollitia assumenda sed temporibus. Minima, esse laudantium! Explicabo, enim nulla.
+                            Autem, necessitatibus molestias expedita amet iusto tempore officiis et, est nisi architecto accusantium aut quibusdam. Possimus, sapiente quis. Eveniet, vero beatae similique nam facilis vitae? Tempore cumque assumenda itaque temporibus. </span>
+                    </div>
+                    <div class="aboutpage-right">
+                        <img src="/graphics/eu2.JPG" alt="picture of myself">
                     </div>
                 </div>
-                <div class="project_wrapper">
-                    <img src="/graphics/Mockup.jpg" alt="mock-up maynooth furniture" class="maynooth-mockup">
-                    <img src="/graphics/Mockup laptop.jpg" alt="mock-up maynooth furniture" class="maynooth-mockup">
-                    <div class="mindmap-wrapper">
-                      <div class="mind-map_right">
-                        <h2>Mindmap</h2>
-                        <p class="mind-map_body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius enim repudiandae aut possimus deserunt, velit tempora. Voluptatibus, dolore repellat quia totam unde itaque dolor sequi pariatur odio cumque similique illo</p>
-                      </div>
-                      <div class="mind-map_left">
-                        <img src="/graphics/mindmap-maynooth.jpeg" alt="mock-up maynooth furniture" class="maynooth-mindmap">
-                      </div>
+                <div class="aboutpage-wrapper">
+                    <div class="aboutpage-left">
+                        <h2>how it's going</h2>
+                        <p>
+                            <span>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit quod, architecto qui hic debitis doloremque aliquam perferendis cupiditate necessitatibus natus dicta dignissimos voluptatem deserunt, autem ullam veritatis dolorem facilis quisquam.
+                            Maxime porro distinctio voluptatum sequi autem nobis eum voluptatem corporis debitis, at atque laboriosam perferendis et esse ex in ullam exercitationem! Obcaecati corrupti incidunt cum porro, necessitatibus labore voluptate aperiam?</span>
+                        </p>
+                    </div>
+                    <div class="aboutpage-right">
                     </div>
                 </div>
-                <div class="project-select_wrapper">
-                  <a href="#" class="project-select_link">
-                  </a>
-                  <a href="xdassignment.html" class="project-select_link">
-                    <h2 class="project-select">next project</h2>
-                  </a>
+                <div class="aboutpage-wrapper">
+                    <div class="aboutpage-left">
+                        <h2>random facts</h2>
+                        <p>i like this</p>
+                        <p>i like that</p>
+                        <p>i also like that</p>
+                        <p>i hate bespoke</p>
+                        <p>etc</p>
+                    </div>
                 </div>
             </div>
         </section>
