--- a/xdassignment.html
+++ b/xdassignment.html
@@ -49,33 +49,27 @@
             <div class="container">
                 <div class="project_text">
                     <div class="project-left">
-                      <h1 class="project-title">Maynooth Furniture</h1>
-                      <h2>my role: design and development</h2>
-                      <h2>project type: personal</h2>
+                      <h1 class="project-title">Adobe XD Assignment</h1>
+                      <h2>my role: design and prototype</h2>
+                      <h2>project type: assignment</h2>
                       <p class="project_body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus obcaecati porro doloribus dolores inventore a iusto facere corrupti dolor, libero, temporibus eligendi itaque consectetur! Facilis sapiente natus fuga voluptates non</p>
-                      <a href="https://amazing-curie-5c87a2.netlify.app/index.html" target="_blank">
-                        <h2 class="site-link">view website
+                      <a href="https://xd.adobe.com/view/a23a448c-8c27-4ea2-b0be-e46346171d84-f769/" target="_blank">
+                        <h2 class="site-link">view prototype
                         </h2>
                       </a>
                     </div>
                 </div>
                 <div class="project_wrapper">
-                    <img src="/graphics/Mockup.jpg" alt="mock-up maynooth furniture" class="maynooth-mockup">
-                    <img src="/graphics/Mockup laptop.jpg" alt="mock-up maynooth furniture" class="maynooth-mockup">
-                    <div class="mindmap-wrapper">
-                      <div class="mind-map_right">
-                        <h2>Mindmap</h2>
-                        <p class="mind-map_body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius enim repudiandae aut possimus deserunt, velit tempora. Voluptatibus, dolore repellat quia totam unde itaque dolor sequi pariatur odio cumque similique illo</p>
-                      </div>
-                      <div class="mind-map_left">
-                        <img src="/graphics/mindmap-maynooth.jpeg" alt="mock-up maynooth furniture" class="maynooth-mindmap">
-                      </div>
-                    </div>
+                    <img src="/graphics/xd-app-mockup.jpg" alt="mock-up maynooth furniture" class="maynooth-mockup">
+                </div>
+                <div class="video_wrapper">
+                  <video class="video" src="/video/animations.mp4" autoplay muted loop></video>
                 </div>
                 <div class="project-select_wrapper">
-                  <a href="#" class="project-select_link">
+                  <a href="maynooth.html" class="project-select_link">
+                    <h2 class="project-select">previous project</h2>
                   </a>
-                  <a href="xdassignment.html" class="project-select_link">
+                  <a href="#" class="project-select_link">
                     <h2 class="project-select">next project</h2>
                   </a>
                 </div>
