--- a/xdassignment.html
+++ b/xdassignment.html
@@ -65,6 +65,11 @@
                 <div class="video_wrapper">
                   <video class="video" src="/video/animations.mp4" autoplay muted loop></video>
                 </div>
+                <div class="xdassignment_wrapper">
+                  <h2>How it's done</h2>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam id architecto veritatis quam, nisi perferendis voluptates qui minus quasi quos vero hic eum, tenetur sequi quis. Voluptas facere obcaecati aliquam.
+                  Nihil hic illo quod, cum odit minus. Ex nulla natus praesentium, commodi nostrum eius ea quo, laborum perspiciatis, voluptatum consequuntur dicta quod tenetur repellendus quas in maxime animi cumque harum.</p>
+                </div>
                 <div class="project-select_wrapper">
                   <a href="maynooth.html" class="project-select_link">
                     <h2 class="project-select">previous project</h2>
