--- a/maynooth.html
+++ b/maynooth.html
@@ -71,6 +71,16 @@
                         <img src="/graphics/mindmap-maynooth.jpeg" alt="mock-up maynooth furniture" class="maynooth-mindmap">
                       </div>
                     </div>
+                    <div class="mindmap-wrapper">
+                      <div class="moodboard_wrapper">
+                        <img src="/graphics/moodboard.png" alt="moodboard maynooth" class="moodboard-maynooth">
+                        <div class="moodboard_text">
+                          <h1>moodboard</h1>
+                          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium quibusdam minus incidunt quaerat asperiores dolor tempora suscipit deleniti at deserunt. Eum quod fugiat odit dolore blanditiis veniam laborum error ullam.
+                          Repellat laborum tenetur assumenda temporibus, deleniti sequi praesentium. A cumque odit voluptatum hic, repellendus, doloribus esse ea alias tempore aut id sit beatae aspernatur asperiores illum quo. Fugiat, officia odit?</p>
+                        </div>
+                      </div>
+                    </div>
                 </div>
                 <div class="project-select_wrapper">
                   <a href="#" class="project-select_link">
