--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" type="icon" href="/graphics/small-icon.ico" />
     <title>Andrei Avram | Portfolio</title>
   </head>
-  <body>
+ <body>
     <div class="container">
       <header class="header" id="header"> 
         <div class="logo">
@@ -95,16 +95,16 @@
             </div>
             <div class="work-wrapper">
               <div class="work-wrapper_left">
-                <img src="/graphics/productreview-placeholder.jpg" alt="" class="work_image" id="work_image-4">
+                <a href="/processing.html"><img src="/graphics/processing-thumbnail.jpg" alt="" class="work_image" id="work_image-4"></a>
               </div>
               <div class="work-wrapper_right" id="work-wrapper_right-4">
                 <h2 class="work-wrapper_header">
-                  Lorem Ipsum
+                  Processing Coding
                 </h2>
                 <p class="work-wrapper_body" id="work_body-4">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente aliquid fugiat error voluptatibus, recusandae distinctio voluptate delectus fugit explicabo nisi vel eligendi nam iure, reprehenderit dolorem harum ipsa eos tempora.
                 </p>
-                <a href="/productreview.html"><button class="blue">VIEW PROJECT</button></a>
+                <a href="/processing.html"><button class="blue">VIEW PROJECT</button></a>
               </div>
             </div>
             <div class="work-wrapper">
