--- a/index.html
+++ b/index.html
@@ -101,6 +101,9 @@
                 <h2 class="work-wrapper_header">
                   Processing Coding
                 </h2>
+                <h3 class="subtitle">
+                  programming
+                </h3>
                 <p class="work-wrapper_body" id="work_body-4">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente aliquid fugiat error voluptatibus, recusandae distinctio voluptate delectus fugit explicabo nisi vel eligendi nam iure, reprehenderit dolorem harum ipsa eos tempora.
                 </p>
