--- a/xdassignment.html
+++ b/xdassignment.html
@@ -63,7 +63,7 @@
                     <img src="/graphics/xd-app-mockup.jpg" alt="mock-up maynooth furniture" class="maynooth-mockup">
                 </div>
                 <div class="video_wrapper">
-                  <video class="video" src="/video/animations.mp4" autoplay muted loop></video>
+                  <video class="video" src="/video/animations.mp4" autoplay muted loop playsinline></video>
                 </div>
                 <div class="xdassignment_wrapper">
                   <h2>how it's done</h2>
