--- a/maynooth.html
+++ b/maynooth.html
@@ -101,7 +101,7 @@
             <p>&copy;designed and built by andrei avram</p>
           </div>
           <div class="footer_right">
-            <a href="#">
+            <a href="www.linkedin.com/in/andrei-avram-design">
               <p>LINKEDIN</p>
             </a>
             <a href="mailto:andrei.avm00@gmail.com?subject=Hello" target="_blank">
