--- a/processing.html
+++ b/processing.html
@@ -92,7 +92,7 @@
             <p>&copy;designed and built by andrei avram</p>
           </div>
           <div class="footer_right">
-            <a href="#">
+            <a href="www.linkedin.com/in/andrei-avram-design">
               <p>LINKEDIN</p>
             </a>
             <a href="mailto:andrei.avm00@gmail.com?subject=Hello" target="_blank">
@@ -106,6 +106,5 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/ScrollMagic.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/plugins/animation.gsap.min.js"></script>
     <script src="script2.js"></script>
-    <!-- <script src="snow.js"></script> -->
   </body>
 </html>
