--- a/xdassignment.html
+++ b/xdassignment.html
@@ -90,7 +90,7 @@
             <p>&copy;designed and built by andrei avram</p>
           </div>
           <div class="footer_right">
-            <a href="www.linkedin.com/in/andrei-avram-design">
+            <a href="https://www.linkedin.com/in/andrei-avram-design/" target="_blank">
               <p>LINKEDIN</p>
             </a>
             <a href="mailto:andrei.avm00@gmail.com?subject=Hello" target="_blank">
